# ticket-triage

./: .gitignore  pyproject.toml  run_classifier.py  run_phase2.py  run_pipeline.py
.github/workflows/: ci.yml
api/: main.py
classifiers/: base.py  sklearn_cls.py
data/: mock_tickets.csv
models/: ticket.py
observers/: metrics.py
pipelines/: triage.py
policies/: base.py  threshold.py
routers/: base.py  confidence_aware.py  rule_based.py
tests/: conftest.py  test_pipeline.py  test_ticket.py
