[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-triage"
version = "0.1.0"
description = "AI-powered ticket triage system with confidence routing and SLA tracking"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "mypy>=1.5",
]

[tool.setuptools]
packages = ["api", "classifiers", "models", "routers", "policies", "observers", "pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true